Added WDT module debugged timer 1/0 modules debugged HBRIDGE module initial commit of ICU module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "ecu_lcd.h": "c",
         "keypad_interface.h": "c",
         "keypad_config.h": "c",
-        "int_interface.h": "c"
+        "int_interface.h": "c",
+        "global_int.h": "c",
+        "timer1_config.h": "c"
     },
     "cmake.configureOnOpen": false,
     "editor.fontSize": 16
