--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,12 @@
 platform = atmelavr
 board = ATmega32
 board_build.mcu = atmega32
+monitor_port = COM4
+monitor_echo = yes
+monitor_speed = 9600
+monitor_eol = CR
 
+monitor_filters = colorize
 lib_ldf_mode = chain+
 board_build.f_cpu = 16000000L
 lib_compat_mode = off
